# performance_meetup

./: README.md
performance_meetup/: Cargo.toml  foo.txt  foo_read.txt
performance_meetup/src/example_cachegrind/: cheatsheet.sh  main.rs  out_cachegrind
performance_meetup/src/example_callgrind/: cheatsheet.sh  main.rs  out_callgrind
performance_meetup/src/example_massif/: .cheatsheet.sh.swp  cheatsheet.sh  main.rs  out_massif
performance_meetup/src/example_memcheck/: cheatsheet.sh  log  main.rs  xtree_memcheck
performance_meetup/src/example_perf/: cheatsheet.sh
performance_meetup/src/example_san/: leak_cheatsheet.sh  main.rs  mem_cheatsheet.sh
