[package]
name = "performance_meetup"
version = "0.1.0"
authors = ["Martina Balint <martina@balint.eu>"]
edition = "2018"

[[bin]]
name = "main"
path = "src/main.rs"


[[bin]]
name = "example_memcheck"
path = "src/example_memcheck/main.rs"

[[bin]]
name = "example_address"
path = "src/example_san/main.rs"

[[bin]]
name = "example_cachegrind"
path = "src/example_cachegrind/main.rs"

[[bin]]
name = "example_callgrind"
path = "src/example_callgrind/main.rs"

[[bin]]
name = "example_massif"
path = "src/example_massif/main.rs"


[dependencies]

[build-dependencies]
#alloc_system="0.1.2"
#jemallocator = "0.1.8"

# The release profile, used for `cargo build --release` (and the dependencies
# for `cargo test --release`, including the local library or binary).
[profile.release]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false

[profile.dev]
opt-level = 3

