[package]
name = "performance_meetup"
version = "0.1.0"
authors = ["Martina Balint <martina@balint.eu>"]
edition = "2018"

[[bin]]
name = "main"
path = "src/main.rs"


[[bin]]
name = "example_memcheck"
path = "src/example_memcheck/main.rs"

[[bin]]
name = "example_address"
path = "src/example_san/main.rs"

[[bin]]
name = "example_cachegrind"
path = "src/example_cachegrind/main.rs"

[[bin]]
name = "example_callgrind"
path = "src/example_callgrind/main.rs"

[[bin]]
name = "example_massif"
path = "src/example_massif/main.rs"


[dependencies]

[build-dependencies]
#alloc_system="0.1.2"
#jemallocator = "0.1.8"

# The release profile, used for `cargo build --release` (and the dependencies
# for `cargo test --release`, including the local library or binary).
[profile.release]
opt-level = 3		# controls the `--opt-level` the compiler builds with.
			# 0-1 is good for debugging. 2 is well-optimized. Max is 3.
			# 's' attempts to reduce size, 'z' reduces size even more.
debug = true
rpath = false
lto = false		# Link Time Optimization usually reduces size of binaries
			# and static libraries. Increases compilation time.
			# If true, passes `-C lto` flag to the compiler, and if a
			# string is specified like 'thin' then `-C lto=thin` will
			# be passed.
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false

[profile.dev]
opt-level = 1
lto = false
debug = true 
